# director-run

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  bun.lockb  cli-test.sh  config.yaml  docker-compose.yml  package.json  release.ts  tsconfig.json  turbo.json
.changeset/: bitter-clowns-travel.md  config.json  forty-camels-jog.md  great-colts-play.md  quiet-bats-grab.md  wet-hands-attack.md
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
apps/backend/: .gitignore  README.md  package.json  tsconfig.json  turbo.json
apps/cli/: .gitignore  CHANGELOG.md  README.md  RELEASE.md  package.json
apps/design-playground/: next.config.ts  package.json
apps/desktop/: README.md  index.html  move-package.js  next.config.ts  package-lock.json  package.json  tsconfig.json  turbo.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/docker/: CHANGELOG.md  package.json
apps/docs/: README.md  docs.json  package.json  style.css
apps/registry/: .env.development  .gitignore  README.md  docker-compose.yml  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  postcss.config.mjs  tsconfig.json
apps/registry-next/: .env.test  .gitignore  package.json
apps/sandbox/: .gitignore  (+2 more)
docs/: RELEASES.md
scripts/: bump-version.sh  changelog.js  install.sh  print-version.sh  release.sh  setup-development.sh  test-cli.sh
(+708 files in other folders)
